# khover

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: .gitignore  CMakeLists.txt  Doxyfile.in
resources/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  abelian.hpp  chaincomplex.hpp  cruxhom.cpp  cubes.cpp  cubes.hpp  enhancements.cpp  enhancements.hpp  gausscode.cpp  hnf.hpp  hnf_impl_lll.hpp  khovanov.cpp  khovanov.hpp  linkdiagram.cpp  linkdiagram.hpp  main.cpp  matrixops.hpp  states.hpp  utils.hpp
src/debug/: debug.hpp
test/: CMakeLists.txt  abelian_test.cpp  chaincomplex_test.cpp  cone_test.cpp  crux_test.cpp  derivative_test.cpp  gausscode_test.cpp  himage_test.cpp  hnf_test.cpp  hochschild_test.cpp  khovanov_test.cpp  linkdiagram_test.cpp  matrixops_test.cpp  mirror8_19_test.cpp  phihat_test.cpp  states_test.cpp
